# data-platform-charmlibs

./: .gitignore  README.md  SECURITY.md  justfile  pyproject.toml
.github/: dependabot.yaml  get-changed.py  unify-publish-inputs.py
.github/workflows/: ci.yaml  conventional-pr-title.yaml  publish.yaml  test-package.yaml
.package/: CHANGELOG.md  README.md  pyproject.toml
.package/src/dpcharmlibs/: __init__.py
.scripts/: ls.py
.template/: cookiecutter.json
.template/hooks/: post_gen_project.py
.template/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
.template/{{ cookiecutter.project_slug }}/tests/integration/: conftest.py  pack.sh
interfaces/: CHANGELOG.md  README.md  pyproject.toml
interfaces/src/dpcharmlibs/interfaces/: __init__.py  _version.py  diff.py  errors.py  events.py  handlers.py  models.py  repository.py  repository_interfaces.py  secrets.py  types.py  utils.py
interfaces/tests/integration/: conftest.py  helpers.py  jubilant_helpers.py  pack.sh  test_backward_compatibility_charm.py  test_charm.py  test_etcd_charm.py  test_kafka_charm.py  test_kafka_connect_charm.py  test_opensearch_charm.py  test_status.py
interfaces/tests/integration/charms/: common.py
interfaces/tests/integration/charms/application-charm/: actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
interfaces/tests/integration/charms/application-charm/src/: charm.py  etcd_requires.py
interfaces/tests/integration/charms/backward-compatibility-charm/: metadata.yaml  pyproject.toml
interfaces/tests/integration/charms/backward-compatibility-charm/src/: charm.py
interfaces/tests/integration/charms/database-charm/: actions.yaml  charmcraft.yaml  pyproject.toml
interfaces/tests/integration/charms/database-charm/src/: charm.py
interfaces/tests/integration/charms/dummy-database-charm/: actions.yaml  charmcraft.yaml  pyproject.toml
interfaces/tests/integration/charms/dummy-database-charm/src/: charm.py
interfaces/tests/integration/charms/kafka-charm/: actions.yaml  charmcraft.yaml
interfaces/tests/integration/charms/kafka-charm/src/: charm.py
interfaces/tests/integration/charms/kafka-connect-charm/: actions.yaml
interfaces/tests/integration/charms/kafka-connect-charm/src/: charm.py
interfaces/tests/integration/charms/opensearch-charm/: actions.yaml
interfaces/tests/integration/charms/opensearch-charm/src/: charm.py
interfaces/tests/integration/scripts/: install_etcdctl.sh
interfaces/tests/unit/: conftest.py  helpers.py  test_data_interfaces.py  test_status.py  test_version.py  test_version_in_charm.py
