[project]
name = "dpcharmlibs-interfaces"
description = "The dpcharmlibs.interfaces package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The Data Platform team at Canonical Ltd."},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "ops (>=3,<4)",
    "pydantic (>=2.11,<3)",
    "cryptography (>=48.0.0)"
]

[tool.poetry.extras]
postgres = ["psycopg2"]

all = ["psycopg2"]


[dependency-groups]
lint = [  # installed for `just lint interfaces` (unit, functional, and integration are also installed)
    # "typing_extensions",
]
unit = [  # installed for `just unit interfaces`
    "ops[testing]",
    "pytest-mock",
    "parameterized",
]
functional = [  # installed for `just functional interfaces`
]
integration = [  # installed for `just integration interfaces`
    "jubilant",
    "pytest-operator",
    "pytest-asyncio",
    "more_itertools",
    "pydantic (>=2.11,<3)",
    "charmlibs-interfaces-tls-certificates>=1.1.0",
    "psycopg2"
]

[project.urls]
"Repository" = "https://github.com/canonical/data-platform-charmlibs"
"Issues" = "https://github.com/canonical/data-platform-charmlibs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpcharmlibs"]

[tool.hatch.version]
path = "src/dpcharmlibs/interfaces/_version.py"

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/integration"]  # correctly sort local imports in tests
exclude = ["tests/integration/charms/backward-compatibility-charm/lib"]

[tool.ruff.lint.extend-per-file-ignores]
# add additional per-file-ignores here to avoid overriding repo-level config
"tests/**/*" = [
    # "E501",  # line too long
]

[tool.pyright]
extends = "../pyproject.toml"
include = ["src"]
pythonVersion = "3.10"  # check no python > 3.10 features are used
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingModuleSource = true
reportIncompatibleMethodOverride = false
reportImportCycles = false


[tool.dpcharmlibs.integration]
# tags to run integration tests with (defaults to running once with no tag, i.e. tags = [''])
# Available in CI in tests/integration/pack.sh and integration tests as CHARMLIBS_TAG
tags = []  # Not used by the pack.sh and integration tests generated by the template

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
asyncio_mode = "auto"
markers = [
    "k8s_only: integration tests that should only run with a K8s Juju cloud",
    "machine_only: integration tests that should only run with a machine Juju cloud",
    "log_errors_allowed: Are error logs allowed in this test ?",
]
