[project]
name = "{{ cookiecutter.__dist_pkg }}"
description = "The {{ cookiecutter.__import_pkg }} package."
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}"
authors = [
    {name="{{ cookiecutter.author }}"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    # "ops",
]

[dependency-groups]
lint = [  # installed for `just lint {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}` (unit, functional, and integration are also installed)
    # "typing_extensions",
]
unit = [  # installed for `just unit {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}`
    "ops[testing]",
]
functional = [  # installed for `just functional {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}`
]
integration = [  # installed for `just integration {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}`
    "jubilant",
]

[project.urls]
"Repository" = "https://github.com/canonical/data-platform-charmlibs"
"Issues" = "https://github.com/canonical/data-platform-charmlibs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpcharmlibs"]

[tool.hatch.version]
path = "src/dpcharmlibs/{{ cookiecutter.__path_prefix }}{{ cookiecutter.__pkg}}/_version.py"

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/integration"]  # correctly sort local imports in tests

[tool.ruff.lint.extend-per-file-ignores]
# add additional per-file-ignores here to avoid overriding repo-level config
"tests/**/*" = [
    # "E501",  # line too long
]

[tool.pyright]
extends = "../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "{{ cookiecutter.min_python_version }}"  # check no python > {{ cookiecutter.min_python_version }} features are used


[tool.dpcharmlibs.integration]
# tags to run integration tests with (defaults to running once with no tag, i.e. tags = [''])
# Available in CI in tests/integration/pack.sh and integration tests as CHARMLIBS_TAG
tags = []  # Not used by the pack.sh and integration tests generated by the template
